@startuml

title __CONTROLLER's Class Diagram__\n

  namespace Controller {
    class Controller.InputEvent {
        {static} + KEY_PRESSED : int
        {static} + MOUSE_MOVED : int
        {static} + MOUSE_PRESSED : int
        + event : EventObject
        {static} + tieFighter_Create : int
        + type : int
    }
  }
  

  namespace Controller {
    class Controller.KeyEventListener {
        + keyPressed()
    }
  }
  

  namespace Controller {
    class Controller.Main {
        {static} + FPS : int
        {static} + INDEX_MOUSE_POINTER : int
        {static} + INDEX_SHOOTER : int
        {static} + backUp : Clip
        {static} + gameData : GameData
        {static} + lightSaber : int
        {static} + onStart : Clip
        {static} + playerInputEventQueue : PlayerInputEventQueue
        {static} + r2 : Clip
        {static} + running : boolean
        {static} + theMission : Clip
        {static} + themeSong : Clip
        {static} + win : MyWindow
        {static} + addTieFighterWithListener()
        {static} + addVaderWithListener()
        {static} + initGame()
        {static} + main()
        {static} ~ gameLoop()
        {static} ~ processCollisions()
        {static} ~ startScreen()
    }
  }
  

  namespace Controller {
    class Controller.MouseEventListener {
        + mouseMoved()
        + mousePressed()
    }
  }
  

  namespace Controller {
    class Controller.PlayerInputEventQueue {
        + queue : LinkedList<InputEvent>
        + processInputEvents()
    }
  }
  

  Controller.KeyEventListener -up-|> java.awt.event.KeyAdapter
  Controller.MouseEventListener -up-|> java.awt.event.MouseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
